--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,7 +9,8 @@ branches:
 build: off
 
 install:
+  - java -jar ./artifacts/app-order.jar &
   - chmod +x gradlew
 
 build_script:
-  - ./gradlew test --headless
+  - ./gradlew test --info
